--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "react-dom": "18.2.0",
     "sass": "^1.63.6",
     "typescript": "5.1.6"
+  },
+  "devDependencies": {
+    "@types/sass": "^1.45.0"
   }
 }
